# ai-ml-sdk-vgf-library

./: .clang-format  .clang-tidy  .cmakelintrc  .gitignore  .pre-commit-config.yaml  BUILD.md  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTORS.txt  README.md  RELEASE_NOTES.md  REUSE.toml  SECURITY.md  ai-ml-sdk-vgf-lib.spdx.json  ai-ml-sdk-vgf-library.spdx.json  conanfile.txt  pyproject.toml  requirements.txt  tooling-requirements.txt
.github/workflows/: build.yml  pre_commit.yml
.reuse/: dep5
cmake/: argparse.cmake  doxygen.cmake  flatbuffers.cmake  json.cmake  package.cmake  pybind11.cmake  sphinx.cmake  version.cmake
cmake/toolchain/: clang.cmake  gcc.cmake  gnu_compiler_options.cmake  linux-aarch64-gcc.cmake  linux-clang.cmake  linux-gcc.cmake  windows-msvc.cmake
docs/: Doxyfile  docs.cmake
docs/help/: vgf_dump_help.rst  vgf_updater_help.rst
docs/source/: building.rst  cloning.rst  conf.py  decoder_api.rst  decoder_c_api.rst  encoder_api.rst  encoder_c_api.rst  file_format.rst  index.rst  logging_api.rst  logging_c_api.rst  vgf_converter.rst  vgf_dump.rst  vgf_updater.rst
include-c/vgf/: decoder.h  encoder.h
include/vgf/: decoder.hpp  encoder.hpp  types.hpp  version.h  vulkan_helpers.generated.hpp
include/vgf-utils/: memory_map.hpp  numpy.hpp  temp_folder.hpp
pip_package/: pyproject.toml  setup.py  setup.py.template
pip_package/vgf_lib/: cli.py
samples/: 1_encode_simple_graph_sample.cpp  2_decode_simple_graph_sample.cpp  3_encode_simple_graph_with_constants_sample.cpp  4_decode_simple_graph_with_constants_sample.cpp  CMakeLists.txt  sample_utils.cpp  sample_utils.hpp  sample_vulkan.h  sample_vulkan.hpp  samples.cpp  samples.hpp
schema/: .clang-format  CMakeLists.txt  vgf.fbs  vgf_generated.h
scripts/: build.py  generate_helpers.py  vulkan_helpers.template.hpp
src/: CMakeLists.txt  constant.hpp  decoder.cpp  decoder_c_api.cpp  decoder_py.cpp  encoder.cpp  encoder_c_api.cpp  encoder_py.cpp  header.hpp  internal_logging.hpp  internal_types.hpp  logging.cpp  logging_c_api.cpp  section_index_table.hpp  types_py.cpp  utils.hpp  vgf_py.cpp
test/: CMakeLists.txt  common.hpp  conftest.py  constant_tests.cpp  header_tests.cpp  logging_tests.cpp  model_resource_tests.cpp  model_sequence_tests.cpp  module_table_tests.cpp  numpy_test.cpp  section_index_table_tests.cpp  test_constant.py  test_header.py  test_model_resource.py  test_model_sequence.py  test_module_table.py  utils_tests.cpp
utils/: CMakeLists.txt
utils/src/: memory_map.cpp  numpy.cpp  parse_vgf.cpp  parse_vgf.hpp  temp_folder.cpp
vgf_converter/: CMakeLists.txt
vgf_converter/src/: main.cpp  version.hpp.in  vgf_converter.cpp  vgf_converter.hpp
vgf_converter/test/: CMakeLists.txt  vgf_converter_tests.cpp
vgf_converter/test/test_data/: simple_conv2d_rescale_graph.vgf  simple_conv2d_rescale_graph_outdated.vgf  single_maxpool_graph_v0_4_0.vgf
vgf_dump/: CMakeLists.txt
vgf_dump/include/vgf/: vgf_dump.hpp
vgf_dump/src/: main.cpp  numpy.cpp  numpy.hpp  version.hpp.in  vgf_dump.cpp
vgf_fuzzer/: CMakeLists.txt  README.md  fuzz_c_api.cpp  fuzz_c_decoders.cpp  fuzz_cpp_api.cpp  fuzz_cpp_decoders.cpp  fuzzers.hpp  main.cpp
vgf_updater/: CMakeLists.txt
vgf_updater/src/: main.cpp  version.hpp.in  vgf_updater.cpp  vgf_updater.hpp
vgf_updater/test/: CMakeLists.txt  vgf_updater_tests.cpp
vgf_updater/test/test_data/: simple_conv2d_rescale_graph_v0_4_1.vgf  simple_conv2d_rescale_graph_v0_4_2.vgf  simple_conv2d_rescale_graph_v0_4_3.vgf  single_maxpool_graph_pre_v0_4_0.vgf  single_maxpool_graph_v0_4_1.vgf  single_maxpool_graph_v0_4_2.vgf  single_maxpool_graph_v0_4_3.vgf
