#
# SPDX-FileCopyrightText: Copyright 2025 Arm Limited and/or its affiliates <open-source-office@arm.com>
# SPDX-License-Identifier: Apache-2.0
#
[build-system]
requires = ["setuptools>=68", "setuptools-scm>=8", "wheel", "pybind11"]
build-backend = "setuptools.build_meta"

[project]
name = "ai_ml_sdk_vgf_library"
description = "ML SDK VGF Library"
readme = "README.md"
dynamic = ["version"]

[project.scripts]
vgf_dump = "vgf_lib.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
vgf_lib = ["binaries/**"]

[tool.setuptools_scm]
fallback_version = "0.0.0"
